Overflow fix

--- a/src/main/webapp/assets/main.css
+++ b/src/main/webapp/assets/main.css
@@ -81,7 +81,6 @@
         margin: 0 auto;
         padding-bottom: 5px;
         text-align: center;
-        overflow: scroll;
         }
 
 
